chore: global upgrade of libraries, Java and Maven dependencies (#5)
- remove dependency from bv-opensource-super-pom parent POM
- upgrade versions of Maven plugins and external libraries
- upgrade to Java 17+ features (record, redundant modifiers, lists operations, parameterized collections, lambda functions)
- optimize all imports
- switch from javax to jakarta